[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/NewNote.gd" type="Script" id=1]

[node name="NewNote" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 14.0
script = ExtResource( 1 )

[node name="NoteContents" type="Label" parent="."]
margin_top = 3.0
margin_right = 884.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Note Contents"
align = 1
valign = 1

[node name="OpenLinkButton" type="Button" parent="."]
margin_left = 888.0
margin_right = 965.0
margin_bottom = 20.0
text = "Open Link"

[node name="DeleteButton" type="Button" parent="."]
margin_left = 969.0
margin_right = 1024.0
margin_bottom = 20.0
text = "Delete"

[connection signal="pressed" from="OpenLinkButton" to="." method="_on_OpenLinkButton_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
